--- a/Landing-Page/package.json
+++ b/Landing-Page/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://shinchan2007.github.io/React_Landing_Page",
+  "homepage":"http://shinchan2007.github.io/React-Landing-page",
   "name": "landing-page",
   "private": true,
   "version": "0.0.0",
